feat(dashboard): :art: Created new components for dashboard
Created new components for dashboard and create new Dialog component with translation for the components

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,8 +1,14 @@
 {
   "Page": {
     "Dashboard": {
-      "title": "Dashboard",
-      "text": "Welcome to your Dashboard"
+      "todo": "My Todo List",
+      "completed": "Completed",
+      "newTodo": "New Todo",
+      "todoPlaceholder": "What needs to be done?",
+      "create": "Create",
+      "descriptionPlaceholder": "Description",
+      "noTodos": "Create new todo",
+      "description": "Description"
     }
   }
 }
