refactor(dashboard): :recycle: Refactor components the dashboard and create new Setting section

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -12,7 +12,13 @@
         "description": "Description:",
         "delete": "Delete"
       },
-      "profile": "Profile",
+
+      "Realized": {
+        "description": "Description:",
+        "delete": "Delete"
+      },
+
+      "setting": "Setting",
       "todo": "My Todo List",
       "completed": "Completed",
       "noTodos": "Create new todo",
