--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -22,6 +22,23 @@
       "completed": "Completado",
       "noTodos": "Crea una nueva tarea",
       "description": "Descripción"
+    },
+    "Profile": {
+      "title": "Perfil",
+      "name": "Nombre",
+      "placeholderName": "Ingrese su nombre",
+      "email": "Correo Electronico",
+      "placeholderEmail": "Ingrese su correo electronico",
+      "firstName": "Primer Nombre",
+      "placeholderFirstName": "Ingrese su primer nombre",
+      "lastName": "Apellido",
+      "placeholderLastName": "Ingrese su apellido",
+      "password": "Contraseña",
+      "placeholderPassword": "Ingrese su contraseña",
+      "confirmPassword": "Confirmar Contraseña",
+      "placeholderConfirmPassword": "Confirme su contraseña",
+      "save": "Guardar",
+      "success": "Datos guardados con exito"
     }
   }
 }
