refactor(app): Improve code documentation and user experience" -m "This commit focuses on improving code clarity and the user experience across the application.
Key changes include:
- Added JSDoc and inline comments to critical components, helpers, and configuration files to improve maintainability.
- Implemented 'no data' messages in the Dashboard to inform users when their todo lists are empty.
- Updated form placeholders and other UI text for better clarity.
- General code cleanup and minor style adjustments.

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -8,7 +8,9 @@
         "success": "Login successful",
         "error": "Login failed",
         "email": "Email",
+        "placeholderEmail": "Enter your email",
         "password": "Password",
+        "placeholderPassword": "Enter your password",
         "noAccount": "Don't have an account"
       },
       "SignUp": {
@@ -39,13 +41,15 @@
       "Todos": {
         "description": "Description:",
         "delete": "Delete",
-        "success": "Task updated successfully"
+        "success": "Task updated successfully",
+        "noTodos": "No todos yet. Add one!"
       },
 
       "Realized": {
         "description": "Description:",
         "delete": "Delete",
-        "success": "Task updated successfully"
+        "success": "Task updated successfully",
+        "noTodos": "No completed todos yet."
       },
 
       "delete": "Delete successful",
