feat(app): Add description field to todos and improve UI
This commit introduces a new "description" field for todos, allowing users to add more details to their tasks.

The following changes are included:
- Added a description input to the "Add Todo" component, with a checkbox to toggle its visibility.
- Updated the dashboard state management to handle the new description field.
- Refined the UI by changing the icon in the dashboard and updating placeholders in the sign-in page.
- Improved the middleware to redirect authenticated users from the root path to the dashboard.
- Added internationalization for the new "description" field.

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -35,7 +35,8 @@
         "create": "Create",
         "todoPlaceholder": "What needs to be done?",
         "descriptionPlaceholder": "Description",
-        "taskCreated": "Task created successfully"
+        "taskCreated": "Task created successfully",
+        "description": "Description?"
       },
 
       "Todos": {
